# RayTracing

./: CMakeLists.txt  base.cpp  base.h  main.cpp  meshshape.cpp  meshshape.h  objects.txt  octotree.cpp  octotree.h  readme.md  scene.cpp  scene.h  scene.h.autosave  scene_param.txt  shape.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
